--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 annotated-types==0.7.0
 anyio==4.8.0
 certifi==2024.12.14
+filelock==3.17.0
+fsspec==2024.12.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
 idna==3.10
+Jinja2==3.1.5
+MarkupSafe==3.0.2
 MouseInfo==0.1.3
+mpmath==1.3.0
+networkx==3.4.2
 numpy==2.2.1
 ollama==0.4.6
 opencv-python==4.11.0.86
@@ -23,5 +29,8 @@ PyRect==0.2.0
 PyScreeze==1.0.1
 pytweening==1.2.0
 rubicon-objc==0.5.0
+setuptools==75.8.0
 sniffio==1.3.1
+sympy==1.13.1
+torch==2.5.1
 typing_extensions==4.12.2
