--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 annotated-types==0.7.0
 anyio==4.8.0
 certifi==2024.12.14
+charset-normalizer==3.4.1
 filelock==3.17.0
 fsspec==2024.12.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
+huggingface-hub==0.27.1
 idna==3.10
 Jinja2==3.1.5
 MarkupSafe==3.0.2
@@ -15,6 +17,7 @@ networkx==3.4.2
 numpy==2.2.1
 ollama==0.4.6
 opencv-python==4.11.0.86
+packaging==24.2
 pillow==11.1.0
 PyAutoGUI==0.9.54
 pydantic==2.10.5
@@ -28,9 +31,17 @@ pyperclip==1.9.0
 PyRect==0.2.0
 PyScreeze==1.0.1
 pytweening==1.2.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
 rubicon-objc==0.5.0
+safetensors==0.5.2
 setuptools==75.8.0
 sniffio==1.3.1
 sympy==1.13.1
+tokenizers==0.21.0
 torch==2.5.1
+tqdm==4.67.1
+transformers==4.48.1
 typing_extensions==4.12.2
+urllib3==2.3.0
