--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ httpx==0.27.2
 huggingface-hub==0.27.1
 idna==3.10
 Jinja2==3.1.5
+joblib==1.4.2
 MarkupSafe==3.0.2
 MouseInfo==0.1.3
 mpmath==1.3.0
@@ -36,9 +37,12 @@ regex==2024.11.6
 requests==2.32.3
 rubicon-objc==0.5.0
 safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
 setuptools==75.8.0
 sniffio==1.3.1
 sympy==1.13.1
+threadpoolctl==3.5.0
 tokenizers==0.21.0
 torch==2.5.1
 tqdm==4.67.1
