--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 annotated-types==0.7.0
 anyio==4.8.0
+blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+click==8.1.8
 filelock==3.17.0
+Flask==3.1.0
 fsspec==2024.12.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
 huggingface-hub==0.27.1
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.5
 joblib==1.4.2
 MarkupSafe==3.0.2
@@ -49,3 +53,4 @@ tqdm==4.67.1
 transformers==4.48.1
 typing_extensions==4.12.2
 urllib3==2.3.0
+Werkzeug==3.1.3
