--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
+accelerate==1.3.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.8.0
+attrs==25.1.0
+bitsandbytes==0.42.0
 blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+datasets==3.2.0
+dill==0.3.8
 filelock==3.17.0
 Flask==3.1.0
-fsspec==2024.12.0
+frozenlist==1.5.0
+fsspec==2024.9.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
@@ -18,12 +27,19 @@ joblib==1.4.2
 MarkupSafe==3.0.2
 MouseInfo==0.1.3
 mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
 networkx==3.4.2
 numpy==2.2.1
 ollama==0.4.6
 opencv-python==4.11.0.86
 packaging==24.2
+pandas==2.2.3
+peft==0.14.0
 pillow==11.1.0
+propcache==0.2.1
+psutil==6.1.1
+pyarrow==19.0.0
 PyAutoGUI==0.9.54
 pydantic==2.10.5
 pydantic_core==2.27.2
@@ -35,7 +51,9 @@ pyobjc-framework-Quartz==11.0
 pyperclip==1.9.0
 PyRect==0.2.0
 PyScreeze==1.0.1
+python-dateutil==2.9.0.post0
 pytweening==1.2.0
+pytz==2025.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
@@ -44,6 +62,7 @@ safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.15.1
 setuptools==75.8.0
+six==1.17.0
 sniffio==1.3.1
 sympy==1.13.1
 threadpoolctl==3.5.0
@@ -52,7 +71,9 @@ torch==2.5.1
 tqdm==4.67.1
 transformers==4.48.1
 typing_extensions==4.12.2
+tzdata==2025.1
+unsloth @ git+https://github.com/unslothai/unsloth.git@038e6d4c8d40207a87297ab3aaf787c19b1006d1
 urllib3==2.3.0
 Werkzeug==3.1.3
-pandas
-pulp
+xxhash==3.5.0
+yarl==1.18.3
