--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,9 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 joblib==1.4.2
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 MouseInfo==0.1.3
 mpmath==1.3.0
 multidict==6.1.0
@@ -38,12 +40,14 @@ pandas==2.2.3
 peft==0.14.0
 pillow==11.1.0
 propcache==0.2.1
+protobuf==5.29.3
 psutil==6.1.1
 pyarrow==19.0.0
 PyAutoGUI==0.9.54
 pydantic==2.10.5
 pydantic_core==2.27.2
 PyGetWindow==0.0.9
+Pygments==2.19.1
 PyMsgBox==1.0.9
 pyobjc-core==11.0
 pyobjc-framework-Cocoa==11.0
@@ -57,10 +61,12 @@ pytz==2025.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+rich==13.9.4
 rubicon-objc==0.5.0
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.15.1
+sentencepiece==0.2.0
 setuptools==75.8.0
 six==1.17.0
 sniffio==1.3.1
@@ -70,6 +76,7 @@ tokenizers==0.21.0
 torch==2.6.0
 tqdm==4.67.1
 transformers==4.48.1
+trl==0.14.0
 typing_extensions==4.12.2
 tzdata==2025.1
 unsloth @ git+https://github.com/unslothai/unsloth.git@038e6d4c8d40207a87297ab3aaf787c19b1006d1
